# bitboard

./: Cargo.toml  NOTES.md
benches/: bench.rs
nqueens/: main.rs
src/: bin.rs  debug.rs  lib.rs  tests.rs
src/board/: board.rs  iter.rs  mod.rs  moves.rs  ops.rs  shift.rs  statics.rs
src/internal/: board.rs  iter.rs  mod.rs  movement.rs  moves.rs  ops.rs  shift.rs  shifting.md  statics.rs
